edge-orch-argocd/edge-orch-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: edge-orch-ingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/aggregator`)
      kind: Rule
      services:
        - name: state-aggregator
          port: 8000
      middlewares:
        - name: strip-edge-orch-prefix
    - match: PathPrefix(`/static`) || PathPrefix(`/state`)
      kind: Rule
      services:
        - name: state-aggregator
          port: 8000
