edge-orch-argocd/state-aggregator-host-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: state-aggregator
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`aggregator.192.168.0.56.sslip.io`)
      kind: Rule
      services:
        - name: state-aggregator
          port: 8000
