edge-orch-argocd/traefik-official-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`192.168.0.56`) && PathPrefix(`/argocd`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
      middlewares:
        - name: strip-argocd-prefix
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`192.168.0.56`) && PathPrefix(`/grafana`)
      kind: Rule
      services:
        - name: prometheus-grafana
          port: 80
      middlewares:
        - name: strip-service-prefix
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`192.168.0.56`) && PathPrefix(`/prometheus`)
      kind: Rule
      services:
        - name: prometheus-kube-prometheus-prometheus
          port: 9090
      middlewares:
        - name: strip-service-prefix
