edge-orch-argocd/traefik-services-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-service-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /prometheus
      - /grafana
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-argocd-prefix
  namespace: argocd
spec:
  stripPrefix:
    prefixes:
      - /argocd
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: kube-system
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-service-prefix@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus-kube-prometheus-prometheus
                port:
                  number: 9090
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: argocd-strip-argocd-prefix@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /argocd
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
