edge-orch-argocd/traefik-services-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: monitoring-ingressroute
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/prometheus`)
      kind: Rule
      services:
        - name: prometheus-kube-prometheus-prometheus
          port: 9090
      middlewares:
        - name: strip-service-prefix
    - match: PathPrefix(`/grafana`)
      kind: Rule
      services:
        - name: prometheus-grafana
          port: 80
      middlewares:
        - name: strip-service-prefix
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-ingressroute
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/argocd`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
      middlewares:
        - name: strip-argocd-prefix
